# travel_price_tracker

./: .env.example  .gitignore  README.md  pyproject.toml  repair_scaffold.sh  upgrade_full_scaffold.sh  upgrade_sources_ingestion.sh
config/: flights_tripcom_airfares.json  flights_tripcom_routes.json  news_sources.yaml  sources.json
data/: city_keywords.json  sources.json  sources.json.bak_20251215_154354  sources.json.bak_20251216_170140  sources.json.bak_20251216_180041  sources.json.bak_20251216_210453  sources.json.bak_20251217_115507  sources.json.bak_20251217_125951  sources.json.bak_20251217_155502
scripts/: bootstrap_news.sh  db_init.sql.bak_20251215_210342  diagnose_tripcom_raw.py  one_click_add_flights_quotes_tripcom.sh  one_click_add_flights_summary_report.sh  one_click_fix_fetch_route_html_arg.sh  one_click_fix_flights_snapshot_bytes_result.sh  one_click_fix_flights_snapshot_call_signature.sh  one_click_fix_flights_snapshot_defaults.sh  one_click_fix_flights_snapshot_obj_undef.sh  one_click_fix_flights_snapshot_signature_and_normalize.sh  one_click_fix_flights_snapshot_syntax.sh  one_click_fix_flights_snapshot_syntax_v2.sh  one_click_fix_flights_snapshot_syntax_v3.sh  one_click_fix_tripcom_exports.sh  one_click_gen_tripcom_flights_20cities.sh  one_click_hard_reset_flights.sh  one_click_patch_repo_flights_add_run_date.sh  one_click_patch_repo_flights_url_alias.sh  one_click_reset_flights_pipeline_clean.sh  one_click_reset_flights_unified.sh  one_click_tripcom_playwright.sh  one_click_tripcom_playwright_v2.sh  one_click_tripcom_pw_httpclient.sh  (+3 more)
(+56 files in other folders)
